terms and conditions and continue mock button is added. containers hierarchy and them spacing is corrected.

--- a/src/components/DepositType/AbstractDeposit/AbstractDeposit.module.css
+++ b/src/components/DepositType/AbstractDeposit/AbstractDeposit.module.css
@@ -1,7 +1,6 @@
 .container,
 .selectedContainer {
   background-color: #f8f8f8;
-  width: 90%;
   border-radius: 12px;
   display: flex;
   flex-direction: column;
