--- a/src/components/DepositType/DepositType.module.css
+++ b/src/components/DepositType/DepositType.module.css
@@ -1,8 +1,63 @@
-.container
-{
+.container {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  align-items: end;
+  justify-content: center;
+  gap: 20px;
+  padding: 20px 16px;
+  padding-bottom: 50px;
+  box-sizing: border-box;
+  height: 100vh;
+}
+
+.abstractDepositesContainer {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
   direction: rtl;
+  width: 100%;
+}
+
+.stickToButtom {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  width: 100%;
+  margin-top: auto;
+}
+
+.termsAndConditionsAgreement {
+  display: flex;
   align-items: center;
+  justify-content: flex-end;
+  width: 100%;
+  gap: 7px;
+}
+
+.description {
+  color: #565656;
+}
+
+.emphasizedPart {
+  font-weight: bold;
+  color: #0564aa;
+}
+
+.noActiveDeposit {
+  width: 100%;
+  height: 136px;
+  border: 1px dashed #989799;
+  border-radius: 12px;
+}
+
+.continueBtn {
+  background-color: #0564aa;
+  width: 100%;
+  border-radius: 12px;
+  height: 42px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
 }
